syntax = "proto3";
package v1;

message Events {
  repeated uint64 timestamp = 1;
  repeated uint64 name = 2;
  repeated Attr attr = 3;
}

message Links {
  repeated uint64 trace_id = 1;
  repeated uint64 span_id = 2;
  repeated Attr attr = 3;
  repeated uint64 trace_state = 4;
}

message Attr { repeated uint64 value = 1; }

message FieldViewInfo { map<uint64, Shard> shards = 1; }

message Shard {
  uint64 id = 1;
  // Tracks last observed bitdepth for ingested values. Not all fields are
  // tracked so, only BSI fields use this.
  //
  // Upper bounnd is 64.
  map<uint64, uint64> bit_depth = 2;
}